--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- LISTAS -->
             <li class="px-2 pt-1 nav-item dropdown">
               <a
-                class="px-5 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
+                class="px-3 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -66,7 +66,7 @@
             <!-- Inscripciones -->
             <li class="px-2 pt-1 nav-item dropdown">
               <a
-                class="px-5 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
+                class="px-3 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -88,7 +88,7 @@
             <!-- CONTACTO -->
             <li class="px-2 pt-1 nav-item dropdown">
               <a
-                class="px-5 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
+                class="px-3 text-center text-white rounded-pill fs-4 nav-link dropdown-toggle d-block bg-warning"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -129,14 +129,14 @@
                 </li>
               </ul>
             </li>
-            <li class="px-2 pt-1 nav-item dropdown">
+            <li class="px-2 pt-2 nav-item dropdown">
               <a
-                class="px-5 text-center text-white rounded-pill fs-4 nav-link  d-block bg-success"
+                class="px-5 text-center text-white rounded-pill fs-5 nav-link  d-block bg-success"
                 href="maestros/index.html"
                 id="navbarDropdown"
                 role="button"
               >
-                Horarios
+                Maestros
               </a>
           </ul>
         </div>
@@ -161,8 +161,8 @@
     </div>
     <!-- maestros -->
    <div class="text-center">
-    <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-4" href="/maestros/index.html" >
-      <button class="p-3 btn text-light text-uppercase bg-success rounded-pill col-4 fs-5" type="submit">Presentacion de Maestros</button>
+    <a class="p-3 m-auto col-xs-6 col-sm-6 col-md-4 col-lg-4 rounded-pill col-4" href="/maestros/index.html" >
+      <button class="p-2 btn text-light col-xs-6 text-uppercase bg-success rounded-pill col-4 fs-5" type="submit">Presentacion de Maestros</button>
     </a>
   </div>
     <!-- Aviso de Libros -->
