--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="text-white dropdown-item" href="#asesores-1">Asesores</a>
+                  <a class="text-white dropdown-item" href="maestros/index.html">Asesores</a>
                 </li>
               </ul>
             </li>
