--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </li>
             <li class="px-1 pt-1 nav-item dropdown">
               <a
-                class="px-3 text-center text-wrap text-white rounded-pill fs-5 nav-link d-block bg-success"
+                class="px-3 text-center text-white text-wrap rounded-pill fs-5 nav-link d-block bg-success"
                 href="maestros/index.html"
                 id="navbarDropdown"
                 role="button"
@@ -147,7 +147,7 @@
             </li>
             <li class="px-1 pt-1 nav-item dropdown">
               <a
-                class="px-3 text-center text-wrap text-white rounded-pill fs-5 nav-link d-block bg-success"
+                class="px-3 text-center text-white text-wrap rounded-pill fs-5 nav-link d-block bg-success"
                 href="maestros/index.html"
                 id="navbarDropdown"
                 role="button"
@@ -176,7 +176,7 @@
     <!-- video -->
     <div class="py-5"></div>
     <div class="py-5 m-auto text-center w-100 ">
-      <video id="video" class="col-xs-6"  width="80%" height="100%" controls poster="img/fondo.webp" preload="metadata">
+      <video id="video" class="col-xs-6"  width="80%" height="100%" controls poster="img/viw.png" preload="metadata">
         <source src="videos/welcome.webm" type="video/webm">
       </video>
     </div>
